--- a/manifests/runnergroup/server/values.yaml
+++ b/manifests/runnergroup/server/values.yaml
@@ -2,6 +2,7 @@ name: ""
 image: ""
 # TODO(weifu): need https://github.com/Azure/kperf/issues/25 to support list
 runnerGroupSpec: ""
+runnerVerbosity: "2"
 nodeSelectors: {}
 flowcontrol:
   priorityLevelConfiguration: workload-low
