--- a/contrib/internal/manifests/loadprofile/list_configmaps.yaml
+++ b/contrib/internal/manifests/loadprofile/list_configmaps.yaml
@@ -13,14 +13,15 @@ loadProfile:
       - staleList:
           version: v1
           resource: configmaps
-        shares: 1000 # chance 1000 / (1000 + 100 + 100)
+        shares: 1000 # chance 1000 / (1000 + 1000 + 100)
       - quorumList:
           version: v1
           resource: configmaps
           limit: 1000
-        shares: 100 # chance 100 / (1000 + 100 + 100)
+        shares: 1000 # chance 1000 / (1000 + 1000 + 100)
       - quorumList:
           version: v1
           resource: configmaps
           limit: 1000
-        shares: 100 # chance 100 / (1000 + 100 + 100)
+          seletor: "ownerID=0"
+        shares: 100 # chance 100 / (1000 + 1000 + 100)
