Upgrade kwok to v0.7.0

--- a/manifests/virtualcluster/nodecontrollers/templates/clusterrole.yaml
+++ b/manifests/virtualcluster/nodecontrollers/templates/clusterrole.yaml
@@ -57,3 +57,22 @@ rules:
       - watch
       - list
       - get
+  - apiGroups:
+    - kwok.x-k8s.io
+    resources:
+    - stages
+    verbs:
+    - create
+    - delete
+    - get
+    - list
+    - patch
+    - update
+    - watch
+  - apiGroups:
+    - kwok.x-k8s.io
+    resources:
+    - stages/status
+    verbs:
+    - patch
+    - update
