--- a/manifests/virtualcluster/nodes/templates/pod-delete.yaml
+++ b/manifests/virtualcluster/nodes/templates/pod-delete.yaml
@@ -10,6 +10,10 @@ spec:
     matchExpressions:
     - key: '.metadata.deletionTimestamp'
       operator: 'Exists'
+  weight: 1
+  delay:
+    durationMilliseconds: 1000
+    jitterDurationMilliseconds: 5000
   next:
     finalizers:
       empty: true
