--- a/manifests/virtualcluster/nodes/templates/pod-delete.yaml
+++ b/manifests/virtualcluster/nodes/templates/pod-delete.yaml
@@ -10,11 +10,16 @@ spec:
     matchExpressions:
     - key: '.metadata.deletionTimestamp'
       operator: 'Exists'
+    - key: '.metadata.finalizers'
+      operator: 'DoesNotExist'
   weight: 1
+  weightFrom:
+    expressionFrom: '.metadata.annotations["pod-delete.stage.kwok.x-k8s.io/weight"]'
   delay:
     durationMilliseconds: 1000
-    jitterDurationMilliseconds: 5000
+    durationFrom:
+      expressionFrom: '.metadata.annotations["pod-delete.stage.kwok.x-k8s.io/delay"]'
+    jitterDurationFrom:
+      expressionFrom: '.metadata.deletionTimestamp'
   next:
-    finalizers:
-      empty: true
     delete: true
