--- a/manifests/virtualcluster/nodes/templates/pod-ready.yaml
+++ b/manifests/virtualcluster/nodes/templates/pod-ready.yaml
@@ -10,65 +10,51 @@ spec:
     matchExpressions:
     - key: '.metadata.deletionTimestamp'
       operator: 'DoesNotExist'
-    - key: '.status.podIP'
+    - key: '.status.conditions.[] | select( .type == "Initialized" ) | .status'
+      operator: 'In'
+      values:
+      - 'True'
+    - key: '.status.containerStatuses.[].state.running.startedAt'
       operator: 'DoesNotExist'
   weight: 1
+  weightFrom:
+    expressionFrom: '.metadata.annotations["pod-ready.stage.kwok.x-k8s.io/weight"]'
   delay:
     durationMilliseconds: 1000
+    durationFrom:
+      expressionFrom: '.metadata.annotations["pod-ready.stage.kwok.x-k8s.io/delay"]'
     jitterDurationMilliseconds: 5000
+    jitterDurationFrom:
+      expressionFrom: '.metadata.annotations["pod-ready.stage.kwok.x-k8s.io/jitter-delay"]'
   next:
+    delete: false
     statusTemplate: |
-      {{ `{{ $now := Now }}` }}
-
+      {{ $now := Now }}
+      {{ $root := . }}
       conditions:
-      - lastTransitionTime: {{ `{{ $now | Quote }}` }}
-        status: "True"
-        type: Initialized
-      - lastTransitionTime: {{ `{{ $now | Quote }}` }}
+      - lastProbeTime: null
+        lastTransitionTime: {{ $now | Quote }}
+        message: ''
+        reason: ''
         status: "True"
         type: Ready
-      - lastTransitionTime: {{ `{{ $now | Quote }}` }}
+      - lastProbeTime: null
+        lastTransitionTime: {{ $now | Quote }}
+        message: ''
+        reason: ''
         status: "True"
         type: ContainersReady
-      {{ `{{ range .spec.readinessGates }}` }}
-      - lastTransitionTime: {{ `{{ $now | Quote }}` }}
-        status: "True"
-        type: {{ `{{ .conditionType | Quote }}` }}
-      {{ `{{ end }}` }}
-
       containerStatuses:
-      {{ `{{ range .spec.containers }}` }}
-      - image: {{ `{{ .image | Quote }}` }}
-        name: {{ `{{ .name | Quote }}` }}
+      {{ range $index, $item := .spec.containers }}
+      {{ $origin := index $root.status.containerStatuses $index }}
+      - image: {{ $item.image | Quote }}
+        name: {{ $item.name | Quote }}
         ready: true
         restartCount: 0
-        state:
-          running:
-            startedAt: {{ `{{ $now | Quote }}` }}
-      {{ `{{ end }}` }}
-
-      initContainerStatuses:
-      {{ `{{ range .spec.initContainers }}` }}
-      - image: {{ `{{ .image | Quote }}` }}
-        name: {{ `{{ .name | Quote }}` }}
-        ready: true
-        restartCount: 0
-        {{ `{{ if eq .restartPolicy "Always" }}` }}
         started: true
         state:
           running:
-            startedAt: {{ `{{ $now | Quote }}` }}
-        {{ `{{ else }}` }}
-        state:
-          terminated:
-            exitCode: 0
-            finishedAt: {{ `{{ $now | Quote }}` }}
-            reason: Completed
-            startedAt: {{ `{{ $now | Quote }}` }}
-        {{ `{{ end }}` }}
-      {{ `{{ end }}` }}
-
-      hostIP: {{ `{{ NodeIPWith .spec.nodeName | Quote }}` }}
-      podIP: {{ `{{ PodIPWith .spec.nodeName ( or .spec.hostNetwork false ) ( or .metadata.uid "" ) ( or .metadata.name "" ) ( or .metadata.namespace "" ) | Quote }}` }}
+            startedAt: {{ $now | Quote }}
+      {{ end }}
       phase: Running
-      startTime: {{ `{{ $now | Quote }}` }}
+      startTime: {{ $now | Quote }}
