--- a/manifests/virtualcluster/nodes/templates/node-heartbeat-with-lease.yaml
+++ b/manifests/virtualcluster/nodes/templates/node-heartbeat-with-lease.yaml
@@ -21,34 +21,34 @@ spec:
     jitterDurationMilliseconds: 610000
   next:
     statusTemplate: |
-      {{ $now := Now }}
-      {{ $lastTransitionTime := or .metadata.creationTimestamp $now }}
+      {{ `{{ $now := Now }}` }}
+      {{ `{{ $lastTransitionTime := or .metadata.creationTimestamp $now }}` }}
       conditions:
-      {{ range NodeConditions }}
-      - lastHeartbeatTime: {{ $now | Quote }}
-        lastTransitionTime: {{ $lastTransitionTime | Quote }}
-        message: {{ .message | Quote }}
-        reason: {{ .reason | Quote }}
-        status: {{ .status | Quote }}
-        type: {{ .type | Quote }}
-      {{ end }}
+      {{ `{{ range NodeConditions }}` }}
+      - lastHeartbeatTime: {{ `{{ $now | Quote }}` }}
+        lastTransitionTime: {{ `{{ $lastTransitionTime | Quote }}` }}
+        message: {{ `{{ .message | Quote }}` }}
+        reason: {{ `{{ .reason | Quote }}` }}
+        status: {{ `{{ .status | Quote }}` }}
+        type: {{ `{{ .type | Quote }}` }}
+      {{ `{{ end }}` }}
 
       addresses:
-      {{ with .status.addresses }}
-      {{ YAML . 1 }}
-      {{ else }}
-      {{ with NodeIP }}
-      - address: {{ . | Quote }}
+      {{ `{{ with .status.addresses }}` }}
+      {{ `{{ YAML . 1 }}` }}
+      {{ `{{ else }}` }}
+      {{ `{{ with NodeIP }}` }}
+      - address: {{ `{{ . | Quote }}` }}
         type: InternalIP
-      {{ end }}
-      {{ with NodeName }}
-      - address: {{ . | Quote }}
+      {{ `{{ end }}` }}
+      {{ `{{ with NodeName }}` }}
+      - address: {{ `{{ . | Quote }}` }}
         type: Hostname
-      {{ end }}
-      {{ end }}
+      {{ `{{ end }}` }}
+      {{ `{{ end }}` }}
 
-      {{ with NodePort }}
+      {{ `{{ with NodePort }}` }}
       daemonEndpoints:
         kubeletEndpoint:
-          Port: {{ . }}
-      {{ end }}
+          Port: {{ `{{ . }}` }}
+      {{ `{{ end }}` }}
