fix: base64-encode runnerGroupSpec to prevent errors in helm.StringPathValuesApplier
When invoking helm.StringPathValuesApplier during a PATCH operation, passing runnerGroupSpec as a raw string fails if the body contains special characters like "[" or "]".

To resolve this:
- runnerGroupSpec is now base64-encoded before being passed to Helm
- Decoded in the Helm template using `b64dec` before applying `toYaml`

--- a/manifests/runnergroup/server/templates/spec.yaml
+++ b/manifests/runnergroup/server/templates/spec.yaml
@@ -6,4 +6,4 @@ metadata:
   name: {{ .Values.name }}-init-spec
   namespace: {{ .Release.Namespace }}
 data:
-  spec: {{ .Values.runnerGroupSpec | toYaml | indent 2 }}
+  spec: {{ .Values.runnerGroupSpec | b64dec | toYaml | indent 2 }}
