fix: correct 'seletor' typo to 'selector' in struct tags and examples
Fixes #224

- Fix JSON/YAML struct tags in api/types/load_traffic.go
- Update test YAML examples in api/types/load_traffic_test.go
- Update documentation examples in docs/runkperf.md
- Update load profile manifest in contrib/internal/manifests/loadprofile/node100_pod10k.yaml

--- a/contrib/internal/manifests/loadprofile/node100_pod10k.yaml
+++ b/contrib/internal/manifests/loadprofile/node100_pod10k.yaml
@@ -28,5 +28,5 @@ loadProfile:
           # including kubelet, when they want to get pods from ETCD. The limit
           # is 100 because it's close to MaxPods value.
           limit: 100
-          seletor: "app=benchmark"
+          selector: "app=benchmark"
         shares: 200 # 200 / (1000 + 100 + 200) * 10 = 1.5 req/s
