refactor: convert LoadProfile.Spec to Specs array
Convert single Spec field to Specs array for time-series replay support.
This is a breaking change that removes backward compatibility as the
feature is not yet GA.

Changes:
- Update LoadProfile struct to use Specs []LoadProfileSpec
- Remove backward compatibility code (GetSpecs/SetFirstSpec methods)
- Update all code references to use .Specs[0] direct access
- Convert all YAML configs from spec: to specs: list format
- Update tests to match new structure

All builds pass and tests verified.

Signed-off-by: JasonXuDeveloper <jason@xgamedev.net>

--- a/contrib/internal/manifests/loadprofile/node100_pod10k.yaml
+++ b/contrib/internal/manifests/loadprofile/node100_pod10k.yaml
@@ -2,31 +2,31 @@ count: 10
 loadProfile:
   version: 1
   description: "node100-pod10k"
-  spec:
-    rate: 10
-    total: 36000
-    conns: 10
-    client: 100
-    contentType: json
-    disableHTTP2: false
-    maxRetries: 0
-    requests:
-      - staleList:
-          version: v1
-          resource: pods
-          fieldSelector: "spec.nodeName=node100pod10k-49"
-        shares: 1000 # 1000 / (1000 + 100 + 200) * 10 = 7.7 req/s
-      - staleList:
-          version: v1
-          resource: pods
-        shares: 100 # 100 / (1000 + 100 + 200) * 10 = 0.7 req/s
-      - quorumList:
-          version: v1
-          resource: pods
-          namespace: benchmark-0
-          # NOTE: It's to simulate the request created by daemonset to get pods,
-          # including kubelet, when they want to get pods from ETCD. The limit
-          # is 100 because it's close to MaxPods value.
-          limit: 100
-          selector: "app=benchmark"
-        shares: 200 # 200 / (1000 + 100 + 200) * 10 = 1.5 req/s
+  specs:
+    - rate: 10
+      total: 36000
+      conns: 10
+      client: 100
+      contentType: json
+      disableHTTP2: false
+      maxRetries: 0
+      requests:
+        - staleList:
+            version: v1
+            resource: pods
+            fieldSelector: "spec.nodeName=node100pod10k-49"
+          shares: 1000 # 1000 / (1000 + 100 + 200) * 10 = 7.7 req/s
+        - staleList:
+            version: v1
+            resource: pods
+          shares: 100 # 100 / (1000 + 100 + 200) * 10 = 0.7 req/s
+        - quorumList:
+            version: v1
+            resource: pods
+            namespace: benchmark-0
+            # NOTE: It's to simulate the request created by daemonset to get pods,
+            # including kubelet, when they want to get pods from ETCD. The limit
+            # is 100 because it's close to MaxPods value.
+            limit: 100
+            selector: "app=benchmark"
+          shares: 200 # 200 / (1000 + 100 + 200) * 10 = 1.5 req/s
